# adm-tray

./: .gitignore  Cargo.toml
src/: api.rs  aria2c.rs  main.rs  server.rs  tray.rs
